lesson 3 - parsing/scheem.peg
start =
    whitespace* exp: expression whitespace*
        { return exp; }

validchar = 
    [0-9a-zA-Z_?!+\-=@#$%^&*/.]

atom =
    chars:validchar+
        { return chars.join(""); }

space = 
    [ \t]

standardspace = 
    [ \n\t\r]

endline = 
    [\n]
  / "\r\n"

stringchar = 
    [()\[\]{};'\\/,]
  / space
  / validchar

extendedchar = 
    ["]
  / stringchar
   
comment = 
    ";;" extendedchar* endline*

whitespace =
    comment
  / standardspace

string = 
    ["] str: (stringchar / standardspace)* ["]
        { return "\"" + str.join("") + "\""; }
        
expression =
    whitespace* right: (atom / string)
        { return right; }
  / whitespace* ['] exp: expression
        { return ['quote', exp]; }
  / whitespace* [(] middle: expression+ whitespace* [)]
        { return middle; }
